--- a/.github/workflows/ui-rm_head_2.7.yaml
+++ b/.github/workflows/ui-rm_head_2.7.yaml
@@ -2,6 +2,12 @@
 name: UI-RM_head_2.7
 
 on:
+  push:
+    branches: 
+      -main 
+    paths-ignore:
+      - 'README.md'
+  
   workflow_dispatch:
     inputs:
       destroy_runner:
