--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -261,7 +261,7 @@ jobs:
 
   delete-runner:
     if: ${{ always() && inputs.destroy_runner == true }}
-    needs: [create-runner, e2e]
+    needs: [post-qase]
     runs-on: ubuntu-latest
     steps:
       # actions/checkout MUST come before auth
@@ -285,7 +285,7 @@ jobs:
 
   post-qase:
     if: ${{ always() && needs.pre-qase.outputs.qase_run_id != '' }}
-    needs: [pre-qase, e2e]
+    needs: [e2e]
     runs-on: ${{ needs.create-runner.outputs.uuid }}
     env:
       QASE_API_TOKEN: ${{ secrets.qase_api_token }}
@@ -322,9 +322,9 @@ jobs:
 
   # Just to signify that something has been cancelled and it's not useful to check the test
   declare-cancelled:
-    if: ${{ always() && (contains(needs.e2e.outputs.steps_status, 'cancelled') || needs.e2e.result == 'cancelled' || needs.create-runner.result != 'success') }}
-    needs: [create-runner, e2e]
-    runs-on: ${{ needs.create-runner.outputs.uuid }}
+    if: ${{ always() && (contains(needs.e2e.outputs.steps_status, 'cancelled') || needs.e2e.result == 'cancelled') }}
+    needs: [e2e]
+    runs-on: ubuntu-latest
     steps:
       - name: Specify in summary if something has been cancelled
         run: echo "# TEST CANCELLED!" >> ${GITHUB_STEP_SUMMARY}
