--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -260,7 +260,7 @@ jobs:
 
   delete-runner:
     if: ${{ always() && inputs.destroy_runner == true }}
-    needs: e2e
+    needs: [create-runner, e2e]
     runs-on: ubuntu-latest
     steps:
       # actions/checkout MUST come before auth
@@ -284,7 +284,7 @@ jobs:
 
   post-qase:
     if: ${{ always() && needs.pre-qase.outputs.qase_run_id != '' }}
-    needs: e2e
+    needs: [e2e, pre-qase]
     runs-on: ubuntu-latest
     env:
       QASE_API_TOKEN: ${{ secrets.qase_api_token }}
