Proper handling of cancelled e2e job

--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -303,7 +303,7 @@ jobs:
           go-version-file: tests/go.mod
 
       - name: Finalize Qase Run and publish Results
-        if: ${{ !contains(needs.e2e.outputs.steps_status, 'cancelled') }}
+        if: ${{ always() && !contains(needs.e2e.result, 'cancelled') }}
         run: |
           REPORT=$(cd tests && make publish-qase-run)
           echo "${REPORT}"
@@ -316,12 +316,12 @@ jobs:
           fi
 
       - name: Delete Qase Run if job has been cancelled
-        if: ${{ contains(needs.e2e.outputs.steps_status, 'cancelled') }}
+        if: ${{ always() && contains(needs.e2e.result, 'cancelled') }}
         run: cd tests && make delete-qase-run
 
   # Just to signify that something has been cancelled and it's not useful to check the test
   declare-cancelled:
-    if: ${{ always() && (contains(needs.e2e.outputs.steps_status, 'cancelled') || needs.e2e.result == 'cancelled') }}
+    if: ${{ always() && contains(needs.e2e.result, 'cancelled') }}
     needs: e2e
     runs-on: ubuntu-latest
     steps:
