--- a/.github/workflows/ui-pr_rm_head_2.8.yaml
+++ b/.github/workflows/ui-pr_rm_head_2.8.yaml
@@ -35,3 +35,4 @@ jobs:
       rancher_version: 'devel/2.8'
       # If qase_run_id is none the run is getting deleted in QASE
       qase_run_id: 'none'
+      grep_test_by_tag: '@login @p0'
