--- a/.github/workflows/ui-rm_head_2.7.yaml
+++ b/.github/workflows/ui-rm_head_2.7.yaml
@@ -23,7 +23,7 @@ on:
         type: string
         required: true
       grep_test_by_tag:
-        description: Grep tags. For multiple selection separate with spaces
+        description: Grep tags. For multiple selection separate with spaces. Keep always @login
         required: false
         type: string
         default: '@login @p0 @p1'
