--- a/.github/workflows/ui-rm_head_2.8.yaml
+++ b/.github/workflows/ui-rm_head_2.8.yaml
@@ -22,6 +22,11 @@ on:
         default: v1.27.10+k3s2
         type: string
         required: true
+      grep_test_by_tag:
+        description: Grep tags. For multiple selection separate with spaces. Keep always @login
+        required: false
+        type: string
+        default: '@login @p0 @p1'
   schedule:
     - cron: '0 4 * * *'
 
@@ -47,3 +52,4 @@ jobs:
       upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.27.10+k3s2' }}
       rancher_version: ${{ inputs.rancher_version || 'devel/2.8' }}
       qase_run_id: ${{ inputs.qase_run_id || 'auto' }}
+      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1' }}
