--- a/.github/workflows/ui-rm_head_2.9.yaml
+++ b/.github/workflows/ui-rm_head_2.9.yaml
@@ -43,6 +43,8 @@ jobs:
       bitbucket_private_pwd: ${{ secrets.BITBUCKET_PRIVATE_PWD }}
       gh_private_user: ${{ secrets.GH_PRIVATE_USER }}
       gh_private_pwd: ${{ secrets.GH_PRIVATE_PWD }}
+      azure_private_user: ${{ secrets.AZURE_PRIVATE_USER }}
+      azure_private_pwd: ${{ secrets.AZURE_PRIVATE_PWD }}
       qase_api_token: ${{ secrets.QASE_API_TOKEN }}
     with:
       test_description: "CI/Manual - UI - Deployment test with Standard K3s"
