Implementing tests for private repo via ssh

--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -44,6 +44,12 @@ on:
       azure_private_pwd:
         description: Azure password for private repo tests
         required: false
+      rsa_private_key_qa:
+        description: RSA private key for private repo tests
+        required: false
+      rsa_public_key_qa:
+        description: RSA public key for private repo tests
+        required: false
       qase_api_token:
         description: Qase API token to use for Qase reporting
         required: true
@@ -276,6 +282,8 @@ jobs:
           GH_PRIVATE_PWD: ${{ secrets.gh_private_pwd }}
           AZURE_PRIVATE_USER: ${{ secrets.azure_private_user }}
           AZURE_PRIVATE_PWD: ${{ secrets.azure_private_pwd }}
+          RSA_PRIVATE_KEY_QA: ${{ secrets.rsa_private_key_qa }}
+          RSA_PUBLIC_KEY_QA: ${{ secrets.rsa_public_key_qa }}
           GREPTAGS: ${{ inputs.grep_test_by_tag }}
           # Add /workdir/e2e/unit_tests/user.spec.ts again when implementing RBAC tests.
           SPEC: |
