--- a/.github/workflows/ui-pr_rm_head_2.8.yaml
+++ b/.github/workflows/ui-pr_rm_head_2.8.yaml
@@ -36,7 +36,7 @@ jobs:
       # WARNING, VALUES BELOW ARE HARDCODED FOR RUNS SCHEDULED BY PULL_REQUEST EVENT
       destroy_runner: true
       upstream_cluster_version: 'v1.27.10+k3s2'
-      rancher_version: 'devel/2.8'
+      rancher_version: 'latest/devel/2.8'
       # If qase_run_id is none the run is getting deleted in QASE
       qase_run_id: 'none'
       grep_test_by_tag: '@login @p0 @p1'
