--- a/.github/workflows/ui-rm_head_2.8.yaml
+++ b/.github/workflows/ui-rm_head_2.8.yaml
@@ -13,8 +13,8 @@ on:
         default: true
         type: boolean
       rancher_version:
-        description: Rancher version as 'devel/2.8' or '2.8.2[-rc3]'
-        default: devel/2.8
+        description: Rancher version channel/version/head_version - latest/latest, latest/2.8.3[-rc8], prime/latest/2.8.2
+        default: latest/devel/2.8
         type: string
         required: true
       upstream_cluster_version:
