--- a/.github/workflows/ui-rm_head_2.9.yaml
+++ b/.github/workflows/ui-rm_head_2.9.yaml
@@ -13,7 +13,7 @@ on:
         default: true
         type: boolean
       rancher_version:
-        description: Rancher version channel/version/head_version - latest/latest, latest/2.9.x[-rc1], prime/latest/2.9.x
+        description: Rancher version channel/version/head_version latest/latest, latest/2.9.x[-rc1], prime/2.9.x, prime/devel/2.9
         default: latest/devel/2.9
         type: string
         required: true
