Enable mochawesome reporter and change several filepaths

--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -185,10 +185,10 @@ jobs:
               # Export outputs for future use
               echo "qase_run_description=${QASE_DESC}" >> ${GITHUB_OUTPUT}
               echo "qase_run_id=${ID}" >> ${GITHUB_OUTPUT}
-              echo "qase_run_name=${GITHUB_WORKFLOW}" >> ${GITHUB_OUTPUT}
+              echo "qase_run_name=${QASE_RUN_NAME}" >> ${GITHUB_OUTPUT}
 
               # Just an info for debugging purposes
-              echo -e "Exported values:\nQASE_RUN_ID=${ID}\nQASE_RUN_DESCRIPTION=${QASE_DESC}\nQASE_RUN_NAME=${GITHUB_WORKFLOW}"
+              echo -e "Exported values:\nQASE_RUN_ID=${ID}\nQASE_RUN_DESCRIPTION=${QASE_DESC}\nQASE_RUN_NAME=${QASE_RUN_NAME}"
               ;;
             'none')
               echo "qase_run_id=" >> ${GITHUB_OUTPUT}
@@ -285,11 +285,11 @@ jobs:
           RSA_PRIVATE_KEY_QA: ${{ secrets.rsa_private_key_qa }}
           RSA_PUBLIC_KEY_QA: ${{ secrets.rsa_public_key_qa }}
           GREPTAGS: ${{ inputs.grep_test_by_tag }}
-          # Add /workdir/e2e/unit_tests/user.spec.ts again when implementing RBAC tests.
+          # Add cypress/e2e/unit_tests/user.spec.ts again when implementing RBAC tests.
           SPEC: |
-            /workdir/e2e/unit_tests/first_login_rancher.spec.ts
-            /workdir/e2e/unit_tests/p0_fleet.spec.ts
-            /workdir/e2e/unit_tests/p1_fleet.spec.ts
+            cypress/e2e/unit_tests/first_login_rancher.spec.ts
+            cypress/e2e/unit_tests/p0_fleet.spec.ts
+            cypress/e2e/unit_tests/p1_fleet.spec.ts
         run: |
           if ${{ inputs.qase_run_id == 'none' }}; then
             # Unset default QASE_* variables when reporting is disabled
