--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@
 /tests/cypress/videos/*
 /tests/cypress/screenshots/*
 /tests/cypress/downloads/*
-/tests/cypress/node_modules/*
+/tests/node_modules
 *package-lock.json
