--- a/.github/workflows/ui-rm_head_2.8.yaml
+++ b/.github/workflows/ui-rm_head_2.8.yaml
@@ -27,7 +27,7 @@ on:
         description: Grep tags. For multiple selection separate with spaces. Keep always @login
         required: false
         type: string
-        default: '@login @p0 @p1'
+        default: '@login @p0 @p1 @rbac'
   schedule:
     - cron: '0 4 * * *'
 
@@ -57,4 +57,4 @@ jobs:
       upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.28.8+k3s1' }}
       rancher_version: ${{ inputs.rancher_version || 'latest/devel/2.8' }}
       qase_run_id: ${{ inputs.qase_run_id || 'auto' }}
-      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1' }}
+      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1 @rbac' }}
