Setting cache to flase on gha setup-go to avoid warning
Co-authored-by: Tomas Hehejik <thehejik@suse.com>

--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -235,6 +235,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v5
         with:
+          cache: false
           go-version-file: tests/go.mod
       - name: Install Node
         uses: actions/setup-node@v4
