--- a/.github/workflows/ui-rm_prime_alpha_rc.yaml
+++ b/.github/workflows/ui-rm_prime_alpha_rc.yaml
@@ -1,5 +1,5 @@
 # This workflow calls the master E2E workflow with custom variables
-name: UI-RM_PRIME_2.8_AND_2.9
+name: UI-RM_Prime_Alpha_RC
 run-name: ${{ github.event_name == 'workflow_dispatch' && format('`{0}` on `{1}` - `{2}` destroy={3}', inputs.rancher_version, inputs.upstream_cluster_version, inputs.grep_test_by_tag, inputs.destroy_runner) || github.workflow }}
 
 on:
@@ -14,13 +14,13 @@ on:
         default: true
         type: boolean
       rancher_version:
-        description: Rancher version channel/version/head_version latest/2.9.x[-rc1], prime/2.9.x, prime/devel/2.9, alpha/2.9.0-alpha1
+        description: Rancher version channel/version/head_version latest/2.9.x[-rc1], prime/2.9.x, prime/devel/2.9, alpha/2.x.x-alphaX
         default: prime/2.9.1
         type: string
         required: true
       upstream_cluster_version:
         description: K3s upstream cluster version where to install Rancher
-        default: 'v1.30.3+k3s1'
+        default: 'v1.28.8+k3s1'
         type: string
         required: true
       grep_test_by_tag:
@@ -51,9 +51,9 @@ jobs:
       test_description: "CI/Manual - UI - Deployment test with Standard K3s"
       cluster_name: cluster-k3s
       # WARNING, VALUES BELOW ARE HARDCODED FOR RUNS SCHEDULED BY CRON
-      destroy_runner: ${{ github.event_name == 'schedule' && true || inputs.destroy_runner }}
-      upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.30.3+k3s1' }}
-      rancher_version: ${{ inputs.rancher_version || prime/2.9.1 }}
+      destroy_runner: ${{ inputs.destroy_runner }}
+      upstream_cluster_version: ${{ inputs.upstream_cluster_version }}
+      rancher_version: ${{ inputs.rancher_version }}
       # QASE RUN ID, 'auto' WILL CREATE RANDOM RUN ID.
-      qase_run_id: ${{ inputs.qase_run_id || 'none' }}
-      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1 @rbac' }}
+      qase_run_id: ${{ inputs.qase_run_id }}
+      grep_test_by_tag: ${{ inputs.grep_test_by_tag }}
