--- a/tests/assets/known-host.yaml
+++ b/tests/assets/known-host.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,6 +5,7 @@ metadata:
   namespace: fleet-local
 type: kubernetes.io/ssh-auth
 stringData:
-  ssh-privatekey: |+
-
+  ssh-privatekey: |-
+    data-here
   known_hosts: |-
+    data-here
