More additions to let yaml import work

--- a/tests/assets/webhook-tests/webhook_ingress.yaml
+++ b/tests/assets/webhook-tests/webhook_ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: cattle-fleet-system
 spec:
   rules:
-  - host: ${EXTERNAL_IP}.nip.io
+  - host: "{{EXTERNAL_IP}}.nip.io"
     http:
       paths:
         - path: /
