--- a/.github/workflows/ui-rm_head_upgrade.yaml
+++ b/.github/workflows/ui-rm_head_upgrade.yaml
@@ -13,6 +13,11 @@ on:
         description: Destroy the auto-generated self-hosted runner
         default: true
         type: boolean
+      upgrade:
+        description: Proceed with Rancher Upgrade (True/False)
+        default: true
+        required: true
+        type: boolean
       rancher_version:
         description: Rancher version channel/version/head_version latest/latest, latest/2.y.x[-rc1], prime/2.y.x, prime/devel/2.y, alpha/2.y.0-alphaZ
         default: latest/devel/2.9
@@ -32,9 +37,7 @@ on:
         description: Grep tags. For multiple selection separate with spaces. Keep always @login
         required: false
         type: string
-        default: '@login @p0 @p1 @rbac'
-  schedule:
-    - cron: '30 4 * * *'
+        default: '@login @upgrade'
 
 jobs:
   ui:
@@ -57,10 +60,10 @@ jobs:
     with:
       test_description: "CI/Manual - UI - Deployment test with Standard K3s"
       cluster_name: cluster-k3s
-      # WARNING, VALUES BELOW ARE HARDCODED FOR RUNS SCHEDULED BY CRON
       destroy_runner: ${{ github.event_name == 'schedule' && true || inputs.destroy_runner }}
-      upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.28.8+k3s1' }}
-      rancher_version: ${{ inputs.rancher_version || 'latest/devel/2.9' }}
-      rancher_upgrade: ${{ inputs.rancher_upgrade || 'latest/devel/2.10' }}
-      qase_run_id: ${{ inputs.qase_run_id || 'auto' }}
-      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1 @rbac' }}
+      upstream_cluster_version: ${{ inputs.upstream_cluster_version }}
+      rancher_version: ${{ inputs.rancher_version }}
+      rancher_upgrade: ${{ inputs.rancher_upgrade }}
+      upgrade: ${{ inputs.upgrade }}
+      qase_run_id: ${{ inputs.qase_run_id }}
+      grep_test_by_tag: ${{ inputs.grep_test_by_tag }}
