--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -226,8 +226,8 @@ jobs:
       UPGRADE: ${{ inputs.upgrade }}
       TIMEOUT_SCALE: 3
       # K8s Version Upgrade
-      K8S_VERSION_UPGRADE: ${{ inputs.k8s_version_upgrade }}
-      K8S_VERSION_UPGRADE_TO: ${{ inputs.k8s_version_to_upgrade }}
+      K8S_VERSION_UPGRADE_DS_CLUSTER: ${{ inputs.k8s_version_upgrade_ds_cluster }}
+      K8S_VERSION_UPGRADE_DS_CLUSTER_TO: ${{ inputs.k8s_version_to_upgrade_ds_cluster_to }}
       # QASE variables
       QASE_API_TOKEN: ${{ secrets.qase_api_token }}
       QASE_PROJECT_CODE: FLEET
@@ -398,8 +398,8 @@ jobs:
           GREPTAGS: ${{ inputs.grep_test_by_tag }}
           UPGRADE: ${{ inputs.upgrade }}
           FLEET_APP_VERSION: ${{ steps.component.outputs.fleet_app_version }}
-          K8S_VERSION_UPGRADE: ${{ inputs.k8s_version_upgrade }}
-          K8S_VERSION_UPGRADE_TO: ${{ inputs.k8s_version_to_upgrade }}
+          K8S_VERSION_UPGRADE_DS_CLUSTER: ${{ inputs.k8s_version_upgrade_ds_cluster }}
+          K8S_VERSION_UPGRADE_DS_CLUSTER_TO: ${{ inputs.k8s_version_to_upgrade_ds_cluster_to }}
           SPEC: |
             cypress/e2e/unit_tests/first_login_rancher.spec.ts
             cypress/e2e/unit_tests/upgrade_fleet.spec.ts
