--- a/.github/workflows/ui-rm_head_2.7.yaml
+++ b/.github/workflows/ui-rm_head_2.7.yaml
@@ -33,18 +33,18 @@ on:
         default: v1.28.8+k3s1
         type: string
         required: true
-      k8s_version_upgrade:
+      k8s_version_upgrade_ds_cluster:
         description: Proceed with K8s version Upgrade (True/False)
         default: false
         required: false
         type: boolean
-      k8s_version_to_upgrade:
+      k8s_version_to_upgrade_ds_cluster_to:
         description: K3s version to be upgraded on cluster. Provide version when k8s upgrade option is checked.
         required: false
         type: string
       grep_test_by_tag:
         description: Grep tags. For multiple selection separate with spaces. Keep always @login.
-          Use @k8supgrade to test K8s version upgrade on imported clusters.
+          Use @k8sUpgrade to test K8s version upgrade on imported clusters.
         required: false
         type: string
         default: '@login @upgrade'
