Updated resource count, using ConfigMap now

--- a/tests/assets/helm-app-test-map-configmap.yaml
+++ b/tests/assets/helm-app-test-map-configmap.yaml
@@ -4,4 +4,6 @@ metadata:
   name: test-map
   namespace: default
 data:
-  values.yaml: 'replicas: 5'
+  values.yaml: |
+    key: mykey,
+    value: values123
