Changed default value of upgrade job to false
Signed-off-by: Satyajit Bulage <satyajit.bulage@suse.com>

--- a/.github/workflows/ui-rm_head_2.7.yaml
+++ b/.github/workflows/ui-rm_head_2.7.yaml
@@ -15,7 +15,7 @@ on:
         type: boolean
       upgrade:
         description: Proceed with Rancher Upgrade (True/False)
-        default: true
+        default: false
         required: true
         type: boolean
       rancher_version:
